[tool.poetry]
name = "billing-service"
version = "0.1.0"
description = ""
authors = ["Danis Sharafutdinov <sharafutdinovv.danis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
